Updating based on pre PR review

--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -21,14 +21,15 @@ the [Helium Program Libraries](https://github.com/helium/helium-program-library)
 
 ## Accessing Oracle Data
 
-### AWS S3 Buckets
+### AWS S3 Bucket
 
 Data is directly accessible from the `foundation-poc-data-requester-pays` bucket in AWS `us-west-2`
 under the top level data category prefixes listed below. All data provided in the S3 bucket is made
 available on a basis of 'Requestor Pays' meaning you, the requester, will pay for the data transfer
-and API costs incurred from the data requests. For more information on accessing data from a
-requester pays bucket, refer to
-[Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html).
+and API costs incurred from the data requests. 
+
+_For more information on accessing data from a requester pays bucket, refer to
+[Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html)._
 
 | Top Level Data Category Prefixes  |
 | --------------------------------- |
