minor copy edits

--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -14,26 +14,25 @@ Important notes:
 
 - Helium L1 Validators are no longer required after the transition to Solana
 - Staking HNT has been replaced with lock-up of HNT to establish a veHNT position
-- Validator stakes will be automatically be migrated to veHNT positions during the transition
+- Existing Validator stakes will be automatically be migrated to veHNT positions during the
+  transition
 - Acton must be taken to return the HNT (unstake) from a veHNT position
-- Action must be taken to delegate veHNT to a network and enable MOBILE and IOT emissions.
+- Action must be taken to delegate veHNT to enable MOBILE Network and/or IOT Network emissions
 
 Validators were critical for the ongoing operation of the Helium Network and will continue to earn
 HNT rewards for their role in supporting the Helium ecosystem until the moment of the L1 transition
-to Solana completion.
+to Solana is completed.
 
-Validators maintained the Network and provided vital operations, including validating transactions
-and producing blocks from which all Network participants benefit. One of the impacts of the passing
-of HIP-70 and transitioning L1 is that the role Validators play as we know it will no longer be
-required, and Validators are sunsetted by the end of April 18th 2023 after the transition is
-complete.
+One of the impacts of the passing of HIP-70 and transitioning L1 is that the role Validators play as
+we know it will no longer be required, and Validators are sunsetted by the end of April 18th 2023
+after the transition is complete.
 
-After 00:00:00 UTC on the 19th of April unless notified otherwise on the Helium Discord Validators
+After 00:00:00 UTC on the 19th of April, unless notified otherwise on the Helium Discord, Validators
 can be turned off.
 
-Validators who remained staked receive new vote escrowed HNT (veHNT) based on their staked HNT
-amount and lock-up period. Your HNT will become veHNT and remain entirely in your wallet's custody.
-veHNT ownership is represented by a non transferable Solana NFT held in your wallet.
+Validator Operators who remained staked receive new vote escrowed HNT (veHNT) based on their staked
+HNT amount and lock-up period. Your HNT will become veHNT and remain entirely in your wallet's
+custody. veHNT ownership is represented by a non transferable Solana NFT held in your wallet.
 
 Post-transition, veHNT will be the only way to vote in the Helium Network and to receive an income
 in Tokens for locking up tokens for a period of time
@@ -151,8 +150,8 @@ day and 48 months selectable in days but with block granularity.
 Lock-up periods help incentivize long-term holders of HNT and deter short-term speculators and those
 with shorter-term interests in the governance of the Network.
 
-The amount of veHNT received for a lock-up period can be seen in this table
-https://docs.helium.com/mine-hnt/validators/validators-and-voting-power/#how-much-vehnt-will-i-get-for-each-lock-up-period
+The amount of veHNT received for a lock-up period
+[can be seen in this table](https://docs.helium.com/mine-hnt/validators/validators-and-voting-power/#how-much-vehnt-will-i-get-for-each-lock-up-period).
 
 ### The Landrush period
 
@@ -238,8 +237,8 @@ periods. Each position of veHNT can delegate all or nothing of the veHNT.
 Any validator staked from HNT held on Ledger hardware wallets using the Helium App will need to be
 migrated to the Solana App using the Helium Solana migration app
 
-The latest information on the procedure and Leger App status is on
-[https://docs.helium.com/solana/migration/ledger](https://docs.helium.com/solana/migration/ledger)
+See the [Ledger Migration Docs](/solana/migration/ledger) The latest information on the procedure
+for Ledger users.
 
 ### “Top-up” of veHNT Positions
 
