applying line wraps

--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -76,7 +76,9 @@ useEffect(() => {
 
 ## Testing Solana Pre-Migration
 
-Before the migration to Solana has been completed, the v2 onboarding server will be used, and transactions will still be submitted to the Helium blockchain. To test Solana before transition, use these variables:
+Before the migration to Solana has been completed, the v2 onboarding server will be used, and
+transactions will still be submitted to the Helium blockchain. To test Solana before transition, use
+these variables:
 
 **_IT IS CRITICALLY IMPORTANT THAT YOU ONLY USE THESE FOR TESTING._**
 
