--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -16,7 +16,8 @@ As of version [1.1.88](https://github.com/helium/blockchain-node/releases/tag/1.
 the migration of their `blockchain-node` wallet to a Solana Paper Compatible Wallet. Follow the
 below instructions to migrate your wallet on testnet.
 
-**Note**: Each wallet can only be migrated once.<br /> **Note**: Testnet is using a snapshot from January 31st. Due to this, testnet and mainnet balances may not match.
+**Note**: Each wallet can only be migrated once.<br /> **Note**: Testnet is using a snapshot from
+January 31st. Due to this, testnet and mainnet balances may not match.
 
 1. Unlock wallet.
 
