--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -17,10 +17,13 @@ the Helium Network through the community proposal
 [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md) and is further defined in
 subsequent HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>,</sup>[^3]<sup>)</sup>.
 
-[^1]: [HIP-70: Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
-[^2]: [HIP-75: MOBILE PoC - Initiate Programmatic Minting](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md)
-[^3]: [HIP-77: Solana Parameters](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md)
+[^1]:
+    [HIP-70: Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
 
+[^2]:
+    [HIP-75: MOBILE PoC - Initiate Programmatic Minting](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md)
+
+[^3]: [HIP-77: Solana Parameters](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md)
 
 The MOBILE token is mined by 5G Hotspots through both data transfer proceeds as well as Proof of
 Coverage.
@@ -49,23 +52,28 @@ course of the genesis period to live Mobile Network Hotspots.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
-The emission schedule was created in [HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#emissions-curve), updated in [HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve) and confirmed in [HIP-77](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules) and 
+The emission schedule was created in
+[HIP-53](https://github.com/helium/HIP/blob/main/0053-mobile-dao.md#emissions-curve), updated in
+[HIP-75](https://github.com/helium/HIP/blob/main/0075-mobile-poc-initiate-programmatic-minting-and-updated-emissions-curve.md#economic-changes-to-emissions-curve)
+and confirmed in
+[HIP-77](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules) and
 is as follows:
 
-| Year | MOBILE at Year Start | MOBILE Minted | Proof of Coverage \* | Hotspot Data \* | Mappers | Service Providers | Oracles \*\* | veHNT Stakers |
-| ---- | -------------------- | ------------- | -------------------- | --------------- | ------- | ----------------- | ------------ | ------------- |
-| 1    | 50B                  | 110B \*\*\*   | 20%                  | 40%             | 10%     | 20%               | 4%           | 6%            |
-| 2    | 110B                 | 30B           | 20%                  | 40%             | 10%     | 20%               | 4%           | 6%            |
-| 3    | 140B                 | 30B           | 20%                  | 40%             | 10%     | 20%               | 4%           | 6%            |
-| 4    | 170B                 | 15B           | 20%                  | 40%             | 10%     | 20%               | 4%           | 6%            |
-| 5    | 185B                 | 15B           | 20%                  | 40%             | 10%     | 20%               | 4%           | 6%            |
-| 6    | 200B                 | 7.5B          | 20%                  | 40%             | 10%     | 20%               | 4%           | 6%            |
-| 7    | 207.5B               | 7.5B          | 20%                  | 40%             | 10%     | 20%               | 4%           | 6%            |
+| Year | MOBILE at Year Start | MOBILE Minted                     | Proof of Coverage <sup>(</sup>[^4]<sup>)</sup> | Hotspot Data <sup>(</sup>[^4]<sup>)</sup> | Mappers | Service Providers | Oracles <sup>(</sup>[^5]<sup>)</sup> | veHNT Stakers |
+| ---- | -------------------- | --------------------------------- | ---------------------------------------------- | ----------------------------------------- | ------- | ----------------- | ------------------------------------ | ------------- |
+| 1    | 50B                  | 110B <sup>(</sup>[^6]<sup>)</sup> | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
+| 2    | 110B                 | 30B                               | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
+| 3    | 140B                 | 30B                               | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
+| 4    | 170B                 | 15B                               | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
+| 5    | 185B                 | 15B                               | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
+| 6    | 200B                 | 7.5B                              | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
+| 7    | 207.5B               | 7.5B                              | 20%                                            | 40%                                       | 10%     | 20%               | 4%                                   | 6%            |
 
 > Full token emissions can be viewed in the MOBILE section of this document:
 > [Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
 
-**\*** Any MOBILE not rewarded for data transfer is rolled into Proof of Coverage.  
-**\*\*** Oracles are not rewarded until additional oracle operators deploy services. 
-**\*\*\*** 50B pre-mine, 60B max emitted in year one. 
-Only 30B actually emitted as no emissions occured between August 2022 and Jan 31st 2023
+[^4]: Any MOBILE not rewarded for data transfer is rolled into Proof of Coverage.
+[^5]: Oracles are not rewarded until additional oracle operators deploy services.
+[^6]:
+    50B pre-mine, 60B max emitted in year one. Only 30B actually emitted as no emissions occured
+    between August 2022 and Jan 31st 2023
