Grammar/Wording/Spelling Fixes (#1204)
* Grammar/Wording Change

* Grammar/Wording Change

* Grammar Change

* Grammar/Wording Changes

* Spelling Error Fix

* Fixing Bad Fix

* applying line wraps

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/solana/migration/governance.mdx
+++ b/docs/solana/migration/governance.mdx
@@ -25,5 +25,5 @@ wallet, and vote.
 ## Governance Changes
 
 The major change with Solana governance is that more of the Helium network can be governed by the
-DAO. Everything from Program (smart contract) changes to approving Makers can now controlled by the
-DAO.
+DAO. Everything from Program (smart contract) changes to approving makers can now be controlled by
+the DAO.
