--- a/docs/solana/migration/blockchain-node.mdx
+++ b/docs/solana/migration/blockchain-node.mdx
@@ -17,7 +17,7 @@ the migration of their `blockchain-node` wallet to a Solana Paper Compatible Wal
 below instructions to migrate your wallet on testnet.
 
 **Note**: Each wallet can only be migrated once.<br /> **Note**: Testnet is using a snapshot from
-January 31st. Due to this testnet and mainnet balances may not match.
+January 31st. Due to this, testnet and mainnet balances may not match.
 
 1. Unlock wallet.
 
