--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -15,15 +15,13 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 IOT is the protocol token of the [Helium IoT Network](/lorawan-on-helium). IOT was introduced to the
 Helium Network through the community proposal
 [HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md) and is further defined in
-subsequent HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup></sup>. The
-first IOT tokens were minted following the Solana migration on April 18, 2023.
+subsequent HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>)</sup>. The first IOT tokens were minted
+following the Solana migration on April 18, 2023.
 
 [^1]:
     [HIP-70: Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
 
-[^2]:
-    [HIP-77: Solana Parameters](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md)
-
+[^2]: [HIP-77: Solana Parameters](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md)
 
 The IOT token is mined by LoRaWAN Hotspots through both data transfer proceeds as well as Proof of
 Coverage.
@@ -51,21 +49,23 @@ Year 1 for IOT started August 1st 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
-The emission schedule was created in [HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md#emissions-curve) and confirmed in [HIP-77](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules) and 
+The emission schedule was created in
+[HIP-52](https://github.com/helium/HIP/blob/main/0052-iot-dao.md#emissions-curve) and confirmed in
+[HIP-77](https://github.com/helium/HIP/blob/main/0077-solana-parameters.md#emission-schedules) and
 is as follows:
 
-| Year | IOT at Year Start | IOT Minted | Proof of Coverage \* | Data Transfer \* | Oracles \*\* | Operations Fund | veHNT Stakes |
-| ---- | ----------------- | ---------- | -------------------- | ---------------- | ------------ | --------------- | ------------ |
-| 1    | 5B                | 65B        | 30%                  | 50%              | 7%           | 7%              | 6%           |
-| 2    | 70B               | 32.5B      | 28.5%                | 51.5%            | 7%           | 7%              | 6%           |
-| 3    | 102.5B            | 32.5B      | 27%                  | 53%              | 7%           | 7%              | 6%           |
-| 4    | 135B              | 16.25B     | 25.5%                | 54.5%            | 7%           | 7%              | 6%           |
-| 5    | 151.25B           | 16.25B     | 24%                  | 56%              | 7%           | 7%              | 6%           |
-| 6    | 167.5B            | 8.125B     | 22.5%                | 57.5%            | 7%           | 7%              | 6%           |
-| 7    | 175.625B          | 8.125B     | 21%                  | 59%              | 7%           | 7%              | 6%           |
+| Year | IOT at Year Start | IOT Minted | Proof of Coverage <sup>(</sup>[^3]<sup>)</sup> | Data Transfer <sup>(</sup>[^3]<sup>)</sup> | Oracles <sup>(</sup>[^4]<sup>)</sup> | Operations Fund | veHNT Stakes |
+| ---- | ----------------- | ---------- | ---------------------------------------------- | ------------------------------------------ | ------------------------------------ | --------------- | ------------ |
+| 1    | 5B                | 65B        | 30%                                            | 50%                                        | 7%                                   | 7%              | 6%           |
+| 2    | 70B               | 32.5B      | 28.5%                                          | 51.5%                                      | 7%                                   | 7%              | 6%           |
+| 3    | 102.5B            | 32.5B      | 27%                                            | 53%                                        | 7%                                   | 7%              | 6%           |
+| 4    | 135B              | 16.25B     | 25.5%                                          | 54.5%                                      | 7%                                   | 7%              | 6%           |
+| 5    | 151.25B           | 16.25B     | 24%                                            | 56%                                        | 7%                                   | 7%              | 6%           |
+| 6    | 167.5B            | 8.125B     | 22.5%                                          | 57.5%                                      | 7%                                   | 7%              | 6%           |
+| 7    | 175.625B          | 8.125B     | 21%                                            | 59%                                        | 7%                                   | 7%              | 6%           |
 
 > Full token emissions can be viewed in the IOT section of this document:
 > [Token Emissions as of Solana Migration](https://github.com/helium/HIP/blob/main/HIP-solana-parameters/token-emissions-as-of-solana-migration.pdf)
 
-**\*** Any IOT not rewarded for data transfer is rolled into Proof of Coverage.  
-**\*\*** Oracles are not rewarded until additional oracle operators deploy services. 
+[^3]: Any IOT not rewarded for data transfer is rolled into Proof of Coverage.
+[^4]: Oracles are not rewarded until additional oracle operators deploy services.
