Update mobile.mdx (#1207)
* Update mobile.mdx

Added Year 1 starts 1st August 2022.

* line wrap

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -48,7 +48,8 @@ the open source tooling found in the [Helium GitHub repositories](https://github
 MOBILE follows a similar minting schedule to HNT, however at a max supply of 230,000,000,000 (230B).
 50B MOBILE were pre-mined at the launch of the network and distributed to the network operations
 fund administered by the Helium Foundation. A fraction of this allocation was distributed over the
-course of the genesis period to live Mobile Network Hotspots.
+course of the genesis period to live Mobile Network Hotspots. Year 1 for MOBILE started August
+1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
