--- a/docs/oracles/oracle-data.mdx
+++ b/docs/oracles/oracle-data.mdx
@@ -21,14 +21,15 @@ the [Helium Program Libraries](https://github.com/helium/helium-program-library)
 
 ## Accessing Oracle Data
 
-### AWS S3 Buckets
+### AWS S3 Bucket
 
 Data is directly accessible from the `foundation-poc-data-requester-pays` bucket in AWS `us-west-2`
 under the top level data category prefixes listed below. All data provided in the S3 bucket is made
 available on a basis of 'Requestor Pays' meaning you, the requester, will pay for the data transfer
-and API costs incurred from the data requests. For more information on accessing data from a
-requester pays bucket, refer to
-[Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html).
+and API costs incurred from the data requests. 
+
+_For more information on accessing data from a requester pays bucket, refer to
+[Downloading objects in Requester Pays buckets](https://docs.aws.amazon.com/AmazonS3/latest/userguide/ObjectsinRequesterPaysBuckets.html)._
 
 | Top Level Data Category Prefixes  |
 | --------------------------------- |
@@ -82,7 +83,7 @@ provides a link to the corresponding protobuf used to decode the data.
 | foundation-iot-ingest           | IotBeaconIngestReport           | iot_beacon_ingest_report.\*            | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L83)     |
 | foundation-iot-ingest           | IotWitnessIngestReport          | iot_witness_ingest_report.\*           | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L90)     |
 | foundation-iot-packet-ingest    | PacketReport                    | packetreport.\*                        | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/packet_router.proto#L8) |
-| foundation-iot-packet-verifier  | Coming soon                     |
+| foundation-iot-packet-verifier  | IotRewardShare(starting 4/18)   | iot_reward_share.\*                    | [Proto](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_lora.proto#L186)
 | foundation-iot-verified-rewards | IotPoc                          | iot_poc.\*                             | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L162)    |
 | foundation-iot-verified-rewards | IotInvalidBeaconReport          | iot_invalid_beacon.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L125)    |
 | foundation-iot-verified-rewards | IotInvalidWitnessReport         | iot_invalid_witness.\*                 | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_lora.proto#L133)    |
@@ -94,6 +95,7 @@ provides a link to the corresponding protobuf used to decode the data.
 | foundation-mobile-verified      | ValidatedHeartbeat              | validated_heartbeat.\*                 | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L80)   |
 | foundation-mobile-verified      | SpeedtestAvg                    | speedtest_avg.\*                       | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L97)   |
 | foundation-mobile-verified      | RadioRewardShare                | radio_reward_share.\*                  | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/service/poc_mobile.proto#L118)  |
+| foundation-mobile-verified      | MobileRewardShare(starting 4/18)| mobile_reward_share.\*                 | [Proto](https://github.com/helium/proto/blob/40388d260fd3603f453a965dbc13f79470b5adcb/src/service/poc_mobile.proto#L145)  |
 | foundation-mobile-verified      | RewardManifest                  | reward_manifest.\*                     | [Proto](https://github.com/helium/proto/blob/149997d2a74e08679e56c2c892d7e46f2d0d1c46/src/reward_manifest.proto#L5)       |
 
 ### Arweave
