Add video walkthough.

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -7,7 +7,10 @@ description: Ledger Hardware Wallet User Documentation
 slug: /solana/migration/ledger
 ---
 
+There is a [video walkthrough of the full process here](https://youtu.be/wZLURMKVp9w).
+
 ## Installing the Helium-Solana App
+
 
 As of now, we are still waiting on Ledger to release our app. Until then, to install you must follow
 these steps:
