--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -7,6 +7,12 @@ description: Ledger Hardware Wallet User Documentation
 slug: /solana/migration/ledger
 ---
 
+:::tip Video Walkthrough
+
+There is a [video walkthrough of the full process here](https://youtu.be/wZLURMKVp9w).
+
+:::
+
 ## Installing the Helium-Solana App
 
 As of now, we are still waiting on Ledger to release our app. Until then, to install you must follow
@@ -14,12 +20,12 @@ these steps:
 
 1. Open Ledger Live.
 2. Go to Settings (top right corner)
-6. Install the Helium-Solana app as you normally would.
-3. Click `Experimental Features`
-4. Enable `Developer Mode`
-5. Change `My ledger provider` to `4`
+3. Install the Helium-Solana app as you normally would.
+4. Click `Experimental Features`
+5. Enable `Developer Mode`
+6. Change `My ledger provider` to `4`
 
-:::tip Ledger Icon and Providers
+:::info Ledger Icon and Providers
 
 While using the testing provider, the icon for the app will not appear properly on your Ledger.
 
