--- a/docs/vote-escrow/vehnt.mdx
+++ b/docs/vote-escrow/vehnt.mdx
@@ -12,6 +12,11 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 
 <img className="docsheader" src={useBaseUrl('/img/blockchain/veHNT.png')} />
 
+In the Helium ecosystem, HNT holders can receive veHNT by locking their HNT on-chain for a specified
+period in exchange for voting power and subDAO delegation income in the Helium DAO as defined in
+HIP-51. After the lock-up period ends, the amount of HNT is released to the owner's wallet and is
+once again transferable.
+
 veHNT, or voting-escrowed HNT, is a token introduced as part of the Helium Network's transition to
 the Solana blockchain and the new governance model. veHNT was designed to empower Helium token
 holders by allowing them to participate in the governance of the network and benefit from its
@@ -21,9 +26,9 @@ informed decisions and actively participate in shaping the network's future.
 ## How veHNT Works
 
 When HNT is locked into the voting escrow, it is converted to veHNT, which can be used to
-participate in network governance and decision-making. The primary purpose of veHNT is to
-incentivize long-term commitment to the network and align stakeholders' interests with the network's
-long-term success.
+participate in network governance and decision-making. veHNT is the only way to vote in the Helium
+Network. The primary purpose of veHNT is to incentivize long-term commitment to the network and
+align stakeholders' interests with the network's long-term success.
 
 veHNT is not a separate token but rather a derivative of HNT with its value tied to HNT. The amount
 of veHNT received when locking HNT depends on the lock-up period chosen by the user, with longer
@@ -58,8 +63,28 @@ must delegate their veHNT to one or both subDAOs. The lock-up period can range f
 months, with longer lock-up periods resulting in a higher veHNT multiplier. Users can also adjust
 their delegations at any time to optimize their earnings from the subDAOs.
 
-veTokens can be managed through Realms:
+veTokens can be managed through Realms using the in-app browser on the
+[Helium Wallet App](/wallets/helium-wallet-app):
 
 - [HNT DAO on Realms](https://app.realms.today/dao/HNT)
 - [IOT subDAO on Realms](https://app.realms.today/dao/IOT)
 - [MOBILE subDAO on Realms](https://app.realms.today/dao/MOBILE)
+
+### Impacts to subDAO Rewards
+
+SubDAO rewards are calculated and paid to the lock-up position each 24hr reward period. Currently,
+the IOT and MOBILE subDAO each have a 6% token emission pool for veHNT stakers.
+
+**subDAO rewards may increase when:**
+
+- More veHNT is delegated in the subDAO you delegated to - your treasury gets more HNT.
+- More Hotspot onboarding fees are burned in the subDAO you delegated to.
+- More network data is transferred in the subDAO you delegated to.
+
+**subDAO rewards may decrease when:**
+
+- More veHNT is delegated in the subDAO you delegated to - your share is reduced
+- More veHNT is delegated to other subDAOs - other treasuries get more HNT.
+- Your delegated veHNT decays over time after you enter cooldown.
+- More Hotspots are online in other subDAOs with a non-zero onboarding fee.
+- More network data is transferred in other subDAOs.
