--- a/docs/solana/migration/validator-operator.mdx
+++ b/docs/solana/migration/validator-operator.mdx
@@ -60,9 +60,9 @@ Follow these steps to migrate your validators:
 
 **Step 1: Monitor the status of the migration**  
 Communications will be provided throughout the day of the migration via Twitter & Discord. The
-migration will begin at 00:00:00 UTC on April 18. After 00:00:00 UTC on April 19, Helium validators
-can be shut down. Validators will no longer produce blocks for the Helium Network and will not
-receive HNT rewards.
+migration will begin at 16:00:00 UTC on April 18. After 16:00:00 UTC on April 19, Helium validators
+can be shut down following comms from core developers. Validators will no longer produce blocks for
+the Helium Network and will not receive HNT rewards.
 
 **Step 2: Access your staked HNT**  
 If you haven't already, move wallets holding staked validators into the Helium Wallet App. After the
@@ -107,8 +107,7 @@ the 6% subDAO token emissions.
 
 - Validator Operators must take action to delegate veHNT to enable MOBILE Network or IOT Network
   emissions
-- Validator Operators must take action to return the HNT (unstake) from a veHNT position after the
-  cooldown period.
+- Validator Operators must take action to return from a veHNT position to HNT (unstake).
 
 :::
 
@@ -149,6 +148,7 @@ HNT distribution of HNT. Now they have a share of 6% of the 68% of the HNT distr
 based on how much HNT for how long they are willing to lock up that HNT.
 
 ### What Happens to my HNT Previously Staked in a Pool?
+
 Staking Pool providers have all made an effort to contact their customers to return the staked HNT.
 Contact the vendor managing your staking pool for more detailed information if you have yet to
 receive your HNT.
@@ -187,7 +187,7 @@ The amount of veHNT received for a lock-up period
 If a validator owner does nothing, the stake will transfer to veHNT automatically.
 
 The owner will receive 375,000 veHNT per validator in their wallet as a single position. This
-position will not enter a cooldown period automatically The position will only unlock once the
+position will not enter a cooldown period automatically. The position will only unlock once the
 cooldown option has been initiated. After selecting cooldown, they will get their 10,000 HNT per
 validator back in 183 days (6 months) after the date of the cooldown selection.
 
