updated youtube walkthrough link

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -9,7 +9,7 @@ slug: /solana/migration/ledger
 
 :::tip Video Walkthrough
 
-There is a [video walkthrough of the full process here](https://youtu.be/wZLURMKVp9w).
+There is a [video walkthrough of the full process here](https://youtu.be/Sl7UBStRmpA).
 
 :::
 
