Remove channels instructions (#1214)
* Remove channels instructions

* updated youtube walkthrough link

---------

Co-authored-by: Sam Gutentag <1404219+samgutentag@users.noreply.github.com>

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -9,7 +9,7 @@ slug: /solana/migration/ledger
 
 :::tip Video Walkthrough
 
-There is a [video walkthrough of the full process here](https://youtu.be/wZLURMKVp9w).
+There is a [video walkthrough of the full process here](https://youtu.be/Sl7UBStRmpA).
 
 :::
 
@@ -20,19 +20,9 @@ these steps:
 
 1. Open Ledger Live.
 2. Go to Settings (top right corner)
-3. Click `Experimental Features`
-4. Enable `Developer Mode`
-5. Change `My ledger provider` to `4`
-6. Install the Helium-Solana app as you normally would,
-   [following the instructions here](/wallets/ledger).
-
-:::info Ledger Icon and Providers
-
-While using the testing provider, the icon for the app will not appear properly on your Ledger.
-
-Do not install any other apps on the `4` provider as other developer teams use this release channel.
-
-:::
+3. Install the Helium-Solana app as you normally would.
+4. Click `Experimental Features`
+5. Enable `Developer Mode`
 
 ---
 
