Remove mention of GitHub for Helium-Solana app

--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -42,7 +42,7 @@ migration process.
 
 Your public key will change on Solana but the private key will remain the same.
 
-- [Helium Solana Ledger App](https://github.com/helium/app-helium-solana) from Github
+- [Helium-Solana Ledger App](https://github.com/helium/app-helium-solana) now available from Ledger Live (ensure Developer Mode is enabled)
 - [Solana Ledger App](https://support.ledger.com/hc/en-us/articles/360016265659-Solana-SOL-?support=true)
   using Ledger Live
 
