--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -332,40 +332,54 @@ double the current amount of Hotspots in their existing fleet.
 
 - For most makers, ~10 SOL is recommended.
 - Makers with large fleets (300k+ Hotspots) ~60 SOL is recommended.
+- For more insight to the amount of SOL needed, check out
+  [https://compressed.app/](https://compressed.app/)
+  - Enter the number of Hotspots to mint in the `How many compressed NFTs do you want to store?`
+    field.
+  - The `Uncompressed equivalent` value is a good approximation, round up when in doubt.
+
+<div className="img-center">
+  <img
+    alt="Helium Wallet app token swap screen"
+    className="appscreen"
+    src={useBaseUrl('img/solana/compressed-nft-calculator.png')}
+  />
+</div>
+
+> Minting 10,000 Hotspots would require ~1.134 SOL in this example.
 
 ### Maker Wallet DC
+
+Maker Wallets will need `DC` to pay onboarding and assert fees. DC can be aquired by either
+
+- Depositing DC into the Maker Wallet on the current Helium L1.
+- Use the Helium Wallet App to swap HNT for DC.
 
 <div class="container" style={{ padding: 0, paddingTop: 0 }}>
   <div class="row">
     <div class="col col--6" style={{ marginBottom: 0 }}>
-      <p>
-        Maker Wallets will need <code>DC</code> to pay onboarding and assert fees. DC can be aquired
-        by either
-        <ul>
-          <li>Depositing DC into the Maker Wallet on the current Helium L1.</li>
-          <li>
-            Use the Helium Wallet App to swap HNT for DC, using the Maker Wallet in the{' '}
-            <code>recipient</code>
-            field.
-          </li>
-        </ul>
-      </p>
+      <img
+        alt="Helium Wallet app token swap screen"
+        className="appscreen, img-center"
+        src={useBaseUrl('img/wallet-app/wallet-home.png')}
+      />
       <p>
         Use the Orange <code>Swap</code> button on the Helium Wallet App homescreen to swap HNT for
         DC.
       </p>
-      <img
-        alt="Helium Wallet app token swap screen"
-        className="appscreen"
-        src={useBaseUrl('img/wallet-app/swap-buttons.png')}
-      />
     </div>
     <div class="col col--6" style={{ marginBottom: 0 }}>
       <img
         alt="Helium Wallet app token swap screen"
-        className="appscreen"
-        src={useBaseUrl('img/wallet-app/hnt-dc-swap.png')}
+        className="appscreen, img-center"
+        src={useBaseUrl('img/wallet-app/token-swap.png')}
       />
+      <p>
+        Select <code>HNT</code> in the first Dropdown to swap for <code>DC</code>.
+      </p>
+      <p>
+        Use the Maker Wallet in the <code>recipient</code> field.
+      </p>
     </div>
   </div>
 </div>
