--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -321,7 +321,7 @@ like to use the library, the setup guide can be found here
 
 :::info
 
-Maker Wallets will need both `SOL` and `DC` for transactions.
+Maker Wallets will need both `SOL` and `DC` for transactions post Migration.
 
 :::
 
