Remove ref to uninstalling Solana Ledger app

--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -227,8 +227,7 @@ all tokens from the Helium derivation path to the Solana derivation path.
 
 Ledger users will need to update their Helium Ledger App to a version that's pending release. This
 upcoming version will use the Solana private key derivation path that moves all your tokens and
-balances over to Solana. You may need to uninstall any Solana Ledger Apps during the Wallet
-migration process.
+balances over to Solana.
 
 Your public key will change on Solana but the private key will remain the same.
 
