--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -6,12 +6,22 @@ sidebar_label: Ledger Hardware Wallet User
 description: Ledger Hardware Wallet User Documentation
 slug: /solana/migration/ledger
 ---
-:::warning
 
-You can test the Helium-Solana Ledger migration before Helium's migration onto Solana Mainnet on April 18th, but doing so will use Solana Devnet, where your tokens are not real. You will not be able to migrate your Helium tokens to Solana Mainnet until after the Helium migration completes on April 19th. If you test the Ledger migration before then, you will need to re-migrate on or after April 19th.
+:::caution Post Migration Ledger Actions
 
-You can migrate your tokens any time after April 19th. There is no need to rush to migrate your tokens unless you want to lock up HNT early to receive the [3X veHNT landrush bonus.](/mine-hnt/validators/validators-and-voting-power/#is-there-a-staking-genesis-period)
+You can test the Helium-Solana Ledger migration before Helium's migration onto Solana Mainnet on
+April 18, 2023, but doing so will use Solana Devnet, where your tokens are not real. You will not be
+able to migrate your Helium tokens to Solana Mainnet until after the Helium migration completes on
+April 19, 2023.
+
+**If you test the Ledger migration before then, you will need to re-migrate on or after April
+19, 2023.**
+
+You can migrate your tokens any time after April 19, 2023. There is no need to rush to migrate your
+tokens unless you want to lock up HNT early to receive the
+[3X veHNT landrush bonus.](/mine-hnt/validators/validators-and-voting-power/#is-there-a-staking-genesis-period)
 :::
+
 :::tip Video Walkthrough
 
 There is a [video walkthrough of the full process here](https://youtu.be/Sl7UBStRmpA).
@@ -47,7 +57,8 @@ migration process.
 
 Your public key will change on Solana but the private key will remain the same.
 
-- [Helium-Solana Ledger App](https://github.com/helium/app-helium-solana) now available from Ledger Live (ensure Developer Mode is enabled)
+- [Helium-Solana Ledger App](https://github.com/helium/app-helium-solana) now available from Ledger
+  Live (ensure Developer Mode is enabled)
 - [Solana Ledger App](https://support.ledger.com/hc/en-us/articles/360016265659-Solana-SOL-?support=true)
   using Ledger Live
 
