--- a/docs/solana/migration/ledger.mdx
+++ b/docs/solana/migration/ledger.mdx
@@ -7,6 +7,21 @@ description: Ledger Hardware Wallet User Documentation
 slug: /solana/migration/ledger
 ---
 
+:::caution Post Migration Ledger Actions
+
+You can test the Helium-Solana Ledger migration before Helium's migration onto Solana Mainnet on
+April 18, 2023, but doing so will use Solana Devnet, where your tokens are not real. You will not be
+able to migrate your Helium tokens to Solana Mainnet until after the Helium migration completes on
+April 19, 2023.
+
+**If you test the Ledger migration before then, you will need to re-migrate on or after April
+19, 2023.**
+
+You can migrate your tokens any time after April 19, 2023. There is no need to rush to migrate your
+tokens unless you want to lock up HNT early to receive the
+[3X veHNT landrush bonus.](/mine-hnt/validators/validators-and-voting-power/#is-there-a-staking-genesis-period)
+:::
+
 :::tip Video Walkthrough
 
 There is a [video walkthrough of the full process here](https://youtu.be/Sl7UBStRmpA).
@@ -20,9 +35,9 @@ these steps:
 
 1. Open Ledger Live.
 2. Go to Settings (top right corner)
-3. Install the Helium-Solana app as you normally would.
-4. Click `Experimental Features`
-5. Enable `Developer Mode`
+3. Click `Experimental Features`
+4. Enable `Developer Mode`
+5. Install the Helium-Solana app as you normally would.
 
 ---
 
@@ -42,7 +57,8 @@ migration process.
 
 Your public key will change on Solana but the private key will remain the same.
 
-- [Helium Solana Ledger App](https://github.com/helium/app-helium-solana) from Github
+- [Helium-Solana Ledger App](https://github.com/helium/app-helium-solana) now available from Ledger
+  Live (ensure Developer Mode is enabled)
 - [Solana Ledger App](https://support.ledger.com/hc/en-us/articles/360016265659-Solana-SOL-?support=true)
   using Ledger Live
 
