Hotspot app docs redux

--- a/docs/hotspot-makers/maker-apps.mdx
+++ b/docs/hotspot-makers/maker-apps.mdx
@@ -168,11 +168,13 @@ As of March 2023 apps are
 - Android App: https://play.google.com/store/apps/details?id=com.freedomfi.FreedomFiApp
 
 ### Helium (Own brand)
+### Helium
 
 - Discord : https://discord.gg/helium
 - iOS App: https://apps.apple.com/us/app/helium-hotspot/id1450463605
 - Android App: https://play.google.com/store/apps/details?id=com.helium.wallet
 
+> read more about the Helium Hotspot App [here](/mine-hnt/helium-hotspot-app).
 ### Heltec
 
 - Discord : https://discord.gg/Pt85TrZfxZ
