--- a/docs/mine-hnt/helium-hotspot-app.mdx
+++ b/docs/mine-hnt/helium-hotspot-app.mdx
@@ -12,85 +12,117 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
 
-:::warning Sunsetting Features
+Nova Labs (formerly Helium Systems, Inc.) manufactured the first set of Hotspots on the Network.
+Nova Labs no longer manufacturers Hotspots, but there is now an extensive
+[list of approved manufacturers](/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing/).
 
-Wallet-related functionality in the Helium Hotspot app has been migrated to the new
-[Helium Wallet App](/wallets/helium-wallet-app).
+## Helium Hotspot App Overview
 
-Hotspot management of non Helium Branded Hotspots in the Helium Hotspot app has been migrated to the
-vendors created apps at [Maker Apps](/hotspot-makers/maker-apps).
+The Helium app (available for [iOS](https://apps.apple.com/us/app/helium-hotspot/id1450463605) and
+[Android](https://play.google.com/store/apps/details?id=com.helium.wallet)) includes everything
+needed to on-board and maintain an Original Helium Hotspot or FreedomFi Hotspot. With the app you
+are able to do things like:
 
-:::
-
-## Sunsetting the Helium App
-
-> Some users may know the [Helium app](/mine-hnt/helium-hotspot-app) as the "Helium Hotspot App" or
-> "the blue app."
-
-The existing [Helium Hotspot app](/mine-hnt/helium-hotspot-app) will be restricted to only the
-management of Original Helium Hotspots in two phases.
-
-**Phase 1:**
-
-> ETA December 19, 2022
-
-- Hotspot App users will be migrated to use the Helium Wallet app for Helium Wallet management.
-- Users can no longer onboard new Hotspots using the Helium App. All new Hotspots will be directed
-  to use the Hotspot's Maker app, web dashboard, or contact email support (in the event that a Maker
-  app is not available).
-
-:::info Maker app Availability
-
-All Makers had a deadline to launch their Maker app by March of 2022. Makers without an app or web
-dashboard either have an app in development or have not responded to requests for additional
-updates.
-
-:::
-
-- Hotspot management for _existing_ Hotspots still available in the Hotspot App.
-- The `transfer_hotspot` and `assert_location` will use the Helium Wallet app for signatures.
-
-**Phase 2:**
-
-> ETA January 2023
-
-- Hotspot management will be handled by Maker apps.
-- Original Helium Hotspots will be managed by the Helium App.
-- All remaining Wallet functionality will use the Helium Wallet app.
-
-:::note What If I Miss The Wallet Migration Deadline?
-
-Users that do not transition to the Helium Wallet app prior to the Solana blockchain migration will
-still be able to access their seed phrase and transition to the Helium Wallet app but will not be
-able to submit transactions in the Helium app. Seed phrase export functionality will remain in the
-app for at least 1 year post blockchain migration.
-
-:::
-
-### Maker Apps
-
-Makers will need to update their [Maker Apps](/hotspot-makers/maker-apps#known-maker-apps) to use
-the new Solana transaction type to add Hotspots to the network, assert location, and transfer
-Hotspots.
-
-The core team will make this update available to Makers in an SDK update weeks before the chain halt
-to allow Makers time to make the update, release the app to the app store, and available to Hotspot
-owners.
-
-The minimum app version will change with each Maker - please check with them for exact details.
-
-:::note Maker Updates
-
-Note that Makers that do not update their Maker apps will mean their customers will not be able to
-add new Hotspots to the network, transfer existing Hotspots, or assert locations.
-
-:::
+- Add Nova Labs or FreedomFi Hotspot to the Helium Network
+- Set or Modify the Hospot's location
+- Configure the Wi-Fi connection of the Hotspot
 
 ---
 
-:::info What about Original Helium Hotspots?
+## App Tabs
 
-Have an Original Helium "OG" Hotspot? Use the Helium Hotspot App Guide
-[here](/hotspot-makers/original-helium-hotspot).
+There are four tabs on the Helium Hotspot App interface, tab the buttons below to see more
+information on each Tab.
 
-:::
+<Tabs block={true}>
+
+<TabItem  value="hotspot_tab" label="Hotspot List" default>
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
+  <div class="row">
+    <div class="col col--4" style={{ marginBottom: 0 }}>
+      <img className="appscreen" src={useBaseUrl('img/hotspot-app/hotspot-list.png')} />
+    </div>
+    <div class="col col--8" style={{ marginBottom: 0 }}>
+      <p>The Hotspot tab shows the Hotspot(s) held by the signed in Wallet. </p>
+      <p>
+        Tap on each one to view details, adjust location and update wifi on the{' '}
+        <code>Hotspot Details</code> screen.
+      </p>
+      <p>Use the Plus Sign Icon to onboard new Nova Labs or FreedomFi Hotspots.</p>
+    </div>
+  </div>
+</div>
+
+</TabItem>
+
+<TabItem  value="account_tab" label="Hotspot Details" default>
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
+  <div class="row">
+    <div class="col col--4" style={{ marginBottom: 0 }}>
+      <img className="appscreen" src={useBaseUrl('img/hotspot-app/hotspot-details.png')} />
+    </div>
+    <div class="col col--8" style={{ marginBottom: 0 }}>
+      <p>
+        The Hotspot Details screen is used to assert the location for a Hotspot or transfer the
+        Hotspot to another Wallet.
+      </p>
+      <p>
+        Use the Gear Icon to adjust Update the Wifi connection and run diagnostics on the Hotspot.
+      </p>
+    </div>
+  </div>
+</div>
+
+</TabItem>
+
+<TabItem  value="notifications_tab" label="Hotspot Onboarding" default>
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
+  <div class="row">
+    <div class="col col--4" style={{ marginBottom: 0 }}>
+      <img className="appscreen" src={useBaseUrl('img/hotspot-app/hotspot-onboarding.png')} />
+    </div>
+    <div class="col col--8" style={{ marginBottom: 0 }}>
+      <p>
+        Select the Model of the Hotspot to be added and follow the prompts on screen to onboard a
+        new Hotspot to the Helium Network.
+      </p>
+    </div>
+  </div>
+</div>
+
+</TabItem>
+
+<TabItem  value="settings_tab" label="App Settings" default>
+
+<div class="container" style={{ padding: 0, paddingTop: 0 }}>
+  <div class="row">
+    <div class="col col--4" style={{ marginBottom: 0 }}>
+      <img className="appscreen" src={useBaseUrl('img/hotspot-app/app-settings.png')} />
+    </div>
+    <div class="col col--8" style={{ marginBottom: 0 }}>
+      <p>
+        The Settings tab allows the user to configure apps PIN settings, set the app Language,
+        reveal the 12 security words, Export the Private Key and view the current app version.{' '}
+      </p>
+      <p>
+        Users can also copy the wallet's Helium Wallet address and coresponding Solana Wallet
+        address.
+      </p>
+    </div>
+  </div>
+</div>
+
+</TabItem>
+
+</Tabs>
+
+---
+
+## Original Helium Hotspot Warranty
+
+The Helium Hotspot limited warranty is only valid for the original sale to the original owner.
+Resold Helium Hotspots from anyone other than Helium directly are not under any warranty whatsoever.
+Please refer to their documentation for any authorized reseller policy.
